--- a/webwork/layout/layout_01.html
+++ b/webwork/layout/layout_01.html
@@ -5,31 +5,85 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>레이아웃 유형01</title>
   <style>
-    body {
-      background-color: #fff3e0;
-    }
-    #wrap {}
-    #header {}
-    #nav {}
-    #aside {}
-    #section {}
-    #footer {}
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        background-color: #fff3E0;
+      }
+      #wrap {
+        width: 1200px;
+        margin: 0 auto;
+      }
+        
+      #header {
+        width: 100%;
+        height: 100px;
+        background-color: #ffe0b2;
+      }
+      #nav {
+        width: 100%;
+        height: 100px;
+        background-color: #ffcc80;
+      }
+      #aside {
+        width: 30%;
+        height: 780px;
+        background-color: #ffb74d;
+        float: left;
+      }
+      #section {
+        width: 70%;
+        height: 780px;
+        background-color: #ffa726;
+        float: left;
+      }
+      #footer {
+        width: 100%;
+        height: 100px;
+        background-color: #ff9800;
+        clear: both;
+      }
+
+      /*미디어쿼리*/
+      @media (max-width: 1300px) {
+        #wrap {
+          width: 96%;
+        }
+      }
+      @media (max-width: 768px) {
+        #wrap {
+          width: 100%;
+        }
+      }
+      @media (max-width: 480px) {
+          #aside {
+              width: 100px;
+              height: 300px;
+          }
+          #section {
+              width: 100px;
+              height: 480px;
+          }
+      }
+
   </style>
 </head>
 <body>
-  <div>
-    <div id="wrap"></div>
-    <div id="header"></div>
-    <div id="nav"></div>
-    <div id="aside"></div>
-    <div id="section"></div>
-    <div id="footer"></div>
-  </div>
+    <div id="wrap">
+      <div id="header"></div>
+      <div id="nav"></div>
+      <div id="aside"></div>
+      <div id="section"></div>
+      <div id="footer"></div>
+    </div>
 
   <!-- 
-    layout01_01 : float 방식 레이아웃
-
-
+      layout01_01 : float 방식 레이아웃
+      인라인구조는 text, block은 박스구조
+      layout01_02 : float 방식 반응형 레이아웃
+      layout)1_03 : flext 방식 레이아웃
   -->
 </body>
 </html>
