--- a/webwork/layout/layout_01.html
+++ b/webwork/layout/layout_01.html
@@ -15,35 +15,34 @@
       #wrap {
         width: 1200px;
         margin: 0 auto;
+        display: grid;
+        grid-template-areas: 
+            "header header"
+            "nav nav"
+            "aside section"
+            "footer footer";
+        grid-template-columns: 30% 70%; 
+        grid-template-rows: 100px 100px 780px 100px;  
       }
-        
       #header {
-        width: 100%;
-        height: 100px;
         background-color: #ffe0b2;
+        grid-area: header;
       }
       #nav {
-        width: 100%;
-        height: 100px;
         background-color: #ffcc80;
+        grid-area: nav;
       }
       #aside {
-        width: 30%;
-        height: 780px;
         background-color: #ffb74d;
-        float: left;
+        grid-area: aside;
       }
       #section {
-        width: 70%;
-        height: 780px;
         background-color: #ffa726;
-        float: left;
+        grid-area: section;
       }
       #footer {
-        width: 100%;
-        height: 100px;
         background-color: #ff9800;
-        clear: both;
+        grid-area: footer;
       }
 
       /*미디어쿼리*/
@@ -58,25 +57,26 @@
         }
       }
       @media (max-width: 480px) {
-          #aside {
-              width: 100px;
-              height: 300px;
-          }
-          #section {
-              width: 100px;
-              height: 480px;
-          }
+        #wrap {
+        grid-template-areas: 
+            "header"
+            "nav"
+            "aside"
+            "section"
+            "footer";
+        grid-template-columns: 100%; 
+        grid-template-rows: 100px 100px 300px 480px 100px;  
       }
-
+    }
   </style>
 </head>
 <body>
     <div id="wrap">
-      <div id="header"></div>
-      <div id="nav"></div>
-      <div id="aside"></div>
-      <div id="section"></div>
-      <div id="footer"></div>
+      <header id="header"></header>
+      <nav id="nav"></nav>
+      <aside id="aside"></aside>
+      <section id="section"></section>
+      <footer id="footer"></footer>
     </div>
 
   <!-- 
