"[add] 집가서 보드게시판 한번 더 확인하고, css로 로그인, 로그아웃, 회원가입, 게시판 바탕꾸미기"

--- a/javawork/ProjectJavascript/src/main/webapp/miniproject/styles/style.css
+++ b/javawork/ProjectJavascript/src/main/webapp/miniproject/styles/style.css
@@ -1,6 +1,19 @@
- body {
+body {
   font-family: 'Jua';
- }
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.center-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a.signup-link {
+  text-align: center;
+}
  
 .wrapper {
   display: flex;
