--- a/bootwork/MyCarjPABoot/src/main/resources/templates/mycar/mycardetail.html
+++ b/bootwork/MyCarjPABoot/src/main/resources/templates/mycar/mycardetail.html
@@ -11,36 +11,111 @@
         body * {
             font-family: 'Jua';
         }
+
+        div.box {
+            width: 200px;
+            border: 1px solid gray;
+            font-size: 20px;
+        }
     </style>
+    <script>
+        $(function () {
+            //처음 시작시 댓글 출력
+            comment_list();
+        });
+
+        function comment_list() {
+            let num = [[${dto.num}]];
+            console.log("num=" + num);
+
+            $.ajax({
+                type: "get",
+                dataType: "json",
+                url: "./commentlist",
+                data: {"num": num},
+                success: function (res) {
+                    let s = `댓글 &nbsp;${res.length}개`;
+                    $.each(res, function (idx, item) {
+                        s +=
+                            `
+					  <div style="margin-left:20px;">
+						  ${item.comment}
+						  <span style="color:gray;font-size:0.9em;">${item.writeday}</span>
+					  </div>
+					  `;
+                    });
+
+                    $(".comment-list").html(s);
+                }
+            });
+        }
+    </script>
 </head>
 <body>
-<div style="margin: 50px 100px;">
+<div style="margin:50px 100px;">
     <h2>[[${dto.carname}]] 상세보기</h2>
     <hr>
     <h2>원본사진</h2>
-    <img th:src="@{'https://kr.object.ncloudstorage.com/bitcamp-kyh/bootmyshop/'+ ${dto.carphoto}}"
-         style="max-width: 300px;border: 2px solid black;">
+    <img th:src="@{'https://kr.object.ncloudstorage.com/bitcamp-kyh/bootmyshop/'+${dto.carphoto}}"
+         style="max-width: 400px;border:2px solid black;">
     <hr>
     <div th:object="${dto}">
-        <img th:src="@{'https://kr.object.ncloudstorage.com/bitcamp-kyh/bootmyshop/' + *{carphoto}}"
-             style="width: 60px;">
-        <!--dto 의 멤버 접근ㄴ은 *{변수명} 으로 출력하는 방법도 있다 -->
+        <img th:src="@{'https://kr.object.ncloudstorage.com/bitcamp-kyh/bootmyshop/'+*{carphoto}}"
+             style="width:60px;">
+        <!--dto 의 멤버 접근은 *{변수명} 으로 출력하는 방법도 있다-->
         <h3>자동차명 : [[*{carname}]]</h3>
-        <div class="box" th:style="'background-color:'+ *{carcolor}">
+        <div class="box" th:style="'background-color:'+*{carcolor}">
             색상 : [[*{carcolor}]]
         </div>
         <h3>가격 : [[*{carprice}]]</h3>
         <h3>구입일 : [[*{carguip}]]</h3>
-        <h3>등록날짜 : <span th:text="${#calendars.format(dto.writeday, 'yyyy-MM-dd HH:mm')}"></span></h3>
+        <h3>등록날짜 : <span th:text="${#calendars.format(dto.writeday,'yyyy-MM-dd HH:mm')}"></span></h3>
     </div>
+    <!--댓글부분 여기부터 추가 -->
+    <hr>
+    <div class="comment-list" style="margin-left:10px;color:blue;">
+        코맨트 목록
+    </div>
+    <div class="input-group" style="width:400px;">
+        <h5>댓글</h5>
+        <input type="text" class="form-control" id="comment"
+               style="margin-left: 10px;border:1px solid black;">
+        <button type="button" class="btn btn-success btn-sm" id="btncomment">저장</button>
+    </div>
+    <!--댓글 추가 이벤트-->
+    <script>
+        $("#btncomment").click(function () {
+            let num = [[${dto.num}]];
+            console.log("num=" + num);
+
+            let comment = $("#comment").val();
+
+            $.ajax({
+                type: "get",
+                dataType: "text",
+                url: "./addcomment",
+                data: {"num": num, "comment": comment},
+                success: function (res) {
+                    comment_list();//댓글 다시 출력
+                    //댓글부분 초기화후 포커스
+                    $("#comment").val("").focus();
+                }
+            });
+
+        });
+    </script>
     <br>
-    <button type="button" class="btn btn-outline-secondary" onclick="location.href='./'">목록</button>
-    <button type="button" class="btn btn-outline-secondary" onclick="location.href='./addcar'">자동차추가</button>
-    <button type="button" class="btn btn-outline-secondary" th:onclick="|location.href='@{./delete(num=${dto.num})}'|">
-        자동차삭제
+    <button type="button" class="btn btn-outline-secondary"
+            onclick="location.href='./'">목록
     </button>
     <button type="button" class="btn btn-outline-secondary"
-            th:onclick="|location.href='@{./carupdate(num=${dto.num})}'|">자동차수정
+            onclick="location.href='./addcar'">자동차추가
+    </button>
+    <button type="button" class="btn btn-outline-secondary"
+            th:onclick="|location.href='@{./delete(num=${dto.num})}'|">상품삭제
+    </button>
+    <button type="button" class="btn btn-outline-secondary"
+            th:onclick="|location.href='@{./carupdate(num=${dto.num})}'|">상품수정
     </button>
 </div>
 </body>
